# stjosephaltar

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  altars.yaml  flake.nix  manage.py  ndm.sh  pyproject.toml  requirements.txt
.direnv/: flake-profile-1-link
.github/workflows/: deploy.yml
altars/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
altars/migrations/: 0001_initial.py  0002_altar_established_date_alter_altar_city_and_more.py  0003_alter_contact_type_alter_event_type.py  0004_alter_contact_phone.py  0005_alter_contact_phone.py  0006_alter_contact_phone.py  0007_alter_contact_type.py  0008_remove_altar_altars_alta_name_f614ab_idx_and_more.py  0009_alter_event_type.py  0010_alter_altar_address1_alter_altar_address2_and_more.py
altars/templates/altars/: add_altar.html  altar_details.html  base.html  find_altars.html  list_altars.html  search_altars.html  search_form.html  update_altar.html
config/: middleware.py  settings.py  urls.py
landing/: urls.py  views.py
landing/templates/landing/: about.html  altarpage.html  altars.html  base.html  calltoaction.html  contact.html  footer.html  gallery.html  hero.html  index.html  landing.html  landing_figma.html  landing_old.html  navigation.html  old_base.html  subscribe_message.html  tradition.html
landing/templates/landing/altars_files/: client  main.tsx
nix/: requirements-deps.nix
planner/: forms.py  models.py  urls.py  views.py
planner/migrations/: 0001_initial.py  0002_route_stop_delete_location.py
planner/templates/planner/: base.html  route_detail.html  route_form.html  route_list.html
static/css/: globals.css  style.css
staticfiles/css/: index.css
staticfiles/leaflet/: Control.MiniMap.css  Control.MiniMap.js  leaflet-src.js  leaflet.extras.css  leaflet.extras.js  leaflet.forms.js  leaflet.js  leaflet_django.css  proj4.js
staticfiles/leaflet/draw/: leaflet.draw-src.css  leaflet.draw-src.js
stjosephaltar/: asgi.py  settings.py  urls.py  wsgi.py
store/: apps.py
tests/: sanity_checks_tests.py
whoosh_index/: _MAIN_0.toc
